welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	
	
	for (j<-0 to nums.length -1){
		if(nums[j]==value){
			return j
		}else{
			return -1
		}
	
	}
	

}
